src/test/ui/const-generics/invalid-enum.stderr
error[E0573]: expected type, found variant `CompileFlag::A`
  --> $DIR/invalid-enum.rs:13:10
   |
LL |   test::<CompileFlag::A>();
   |          ^^^^^^^^^^^^^^
   |          |
   |          not a type
   |          help: try using the variant's enum: `CompileFlag`

error[E0107]: wrong number of const arguments: expected 1, found 0
  --> $DIR/invalid-enum.rs:13:3
   |
LL |   test::<CompileFlag::A>();
   |   ^^^^^^^^^^^^^^^^^^^^^^ expected 1 const argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/invalid-enum.rs:13:10
   |
LL |   test::<CompileFlag::A>();
   |          ^^^^^^^^^^^^^^ unexpected type argument
   |
help: If this generic argument was intended as a const parameter, try surrounding it with braces:
   |
LL |   test::<{ CompileFlag::A }>();
   |          ^                ^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0573.
For more information about an error, try `rustc --explain E0107`.
